# ollama-classifier-rs

./: Cargo.toml  README.md
examples/: example_usage.rs  run_sample_data.rs
local_tests/: dataset_runner.rs  test_local_llamacpp.rs  test_local_ollama.rs  test_local_sglang.rs  test_local_vllm.rs
src/: classifier.rs  lib.rs  prompts.rs  scoring.rs  types.rs
src/backends/: base.rs  llamacpp.rs  mod.rs  ollama.rs  openai_compat.rs  sglang.rs  vllm.rs
tests/: backends_http.rs  mock_backend.rs
