[package]
name = "ollama-classifier-rs"
version = "0.6.0"
edition = "2021"
description = "A backend-agnostic text classifier for LLMs (Ollama, vLLM, SGLang, llama.cpp)"
license = "MIT"
repository = "https://github.com/paluigi/ollama-classifier-rs"
readme = "README.md"
keywords = ["llm", "classification", "ollama", "vllm", "sglang"]
categories = ["text-processing", "science"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
